[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 55.0
margin_top = 44.0
margin_right = 253.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileButton" type="Button" parent="HBoxContainer"]
margin_right = 35.0
margin_bottom = 40.0
text = "File"

[node name="AnimateButton" type="Button" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 105.0
margin_bottom = 40.0
text = "Animate"

[node name="AboutButton" type="Button" parent="HBoxContainer"]
margin_left = 109.0
margin_right = 159.0
margin_bottom = 40.0
text = "About"

[node name="ExitButton" type="Button" parent="HBoxContainer"]
margin_left = 163.0
margin_right = 198.0
margin_bottom = 40.0
text = "Exit"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.txt ; Text Files" )
current_dir = "/Projects/edu/1y2s/prog_lab_12"
current_path = "/Projects/edu/1y2s/prog_lab_12/"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
window_title = "Внимание!"
dialog_text = "Programmer: Admin

2022"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 109.0
margin_top = 254.0
margin_right = 149.0
margin_bottom = 294.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 550.0
margin_bottom = 14.0
text = "Before conversion:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 550.0
margin_bottom = 118.0
rect_min_size = Vector2( 550, 100 )
readonly = true

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 550.0
margin_bottom = 136.0
text = "After conversion:"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 550.0
margin_bottom = 240.0
rect_min_size = Vector2( 550, 100 )
readonly = true

[connection signal="pressed" from="HBoxContainer/FileButton" to="." method="_on_FileButton_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimateButton" to="." method="_on_AnimateButton_pressed"]
[connection signal="pressed" from="HBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
